práctica de márgenes y bordes

--- a/contacto.html
+++ b/contacto.html
@@ -8,17 +8,22 @@
     <script src="https://kit.fontawesome.com/fcbd091d12.js" crossorigin="anonymous"></script>
 </head>
 <body>
+    <div>
+        <p>15% de descuento en efectivo - 3 cuotas sin interés con tarjetas bancarizadas</p>
+    </div>
     <nav>
         <ul>
-            <li><b><a href="index.html">Inicio</a></b></li>
-            <li><b><u>Productos</u></b></li>
-            <li><b><a href="nosotros.html">Nosotros</a></b></li>
-            <li><b><a href="contacto.html">Contacto</a></b></li>
+            <li><b><a href="index.html">INICIO</a></b></li>
+            <li><b><a href="mediasterapéuticas.html">MEDIAS TERAPÉUTICAS</a></b></li>
+            <li><b><a href="nosotros.html">NOSOTROS</a></b></li>
+            <li><b><a href="contacto.html">CONTACTO</a></b></li>
         </ul>
     </nav>
     <br>
-    <div class="cajas"><i class="fa-solid fa-phone" style="color: #3f4474;"></i>  2213649986 / 2214276920 <br>
-        <i class="fa-solid fa-at" style="color: #3f4474;"></i>  stylofinesockslp@gmail.com <br>
+    <div class="cajas">
+        <i class="fa-solid fa-phone" style="color: #3f4474;"></i> 2214276920 <br>
+        <i class="fa-brands fa-whatsapp" style="color: #3f4474;"></i> +5492216349986 <br>
+        <i class="fa-solid fa-envelope" style="color: #3f4474;"></i> stylolaplata@gmail.com <br>
         <i class="fa-brands fa-instagram" style="color: #3f4474;"></i> <a href="https://www.instagram.com/stylo.laplata/?hl=es-la" target="_blank">Seguinos en Instagram</a> <br>
         <i class="fa-brands fa-facebook" style="color: #3f4474;"></i> <a href="https://www.facebook.com/profile.php?id=100054909783162" target="_blank">Seguinos en Facebook</a>
     </div> <br><br>
@@ -26,16 +31,26 @@
 
     <main>
             <form action="colecta.html">
-                <label for="text">Nombre:</label> <br>
+                <label for="text"><b>NOMBRE:</b></label> <br>
                 <input type="text" maxlength="10"> <br> <br> 
-                <label for="email">Email:</label> <br>
+                <label for="email"><b>EMAIL:</b></label> <br>
                 <input type="email"> <br> <br>
-                Mensaje: <br> 
-                <textarea name="Mensaje" rows="7" cols="30" placeholder="Dejanos tu consulta..."></textarea> <br>
-                <input type="submit" value="Enviar">
-                <input type="reset" value="Borrar">
+                <b>MENSAJE:</b> <br> 
+                <textarea name="Mensaje" rows="7" cols="34" placeholder="Dejanos tu consulta..."></textarea> <br>
+                <input type="submit" value="Enviar" id="boton">
+                <input type="reset" value="Borrar" id="boton">
             </form>
     </main>
+
+    <footer>
+        <h3>
+            Redes Sociales
+        </h3>
+        <ul>
+                <li><a href="https://www.instagram.com/stylo.laplata/?hl=es-la" target="_blank"><i class="fa-brands fa-instagram" style="color: #3f4474;"></i></a></li>
+                <li><a href="https://www.facebook.com/profile.php?id=100054909783162" target="_blank"><i class="fa-brands fa-facebook" style="color: #3f4474;"></i></a></li>
+        </ul>
+    </footer>    
 </body>
 </html>
     
