--- a/index.html
+++ b/index.html
@@ -8,28 +8,20 @@
     <script src="https://kit.fontawesome.com/fcbd091d12.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <header>
-        <H1>ALVERDE TERAPÉUTICAS - STYLO LA PLATA</H1>
-    </header>
+    <div>
+        <p>15% de descuento en efectivo - 3 cuotas sin interés con tarjetas bancarizadas</p>
+    </div>
     <nav>
         <ul>
-            <li><b><a href="index.html">Inicio</a></b></li>
-            <li><b><a href="mediasterapéuticas.html">Medias Terapéuticas</a></b></li>
-                <ul>
-                    <li>Compresión 8-15mmHg</li>
-                    <li>Compresión 15-20mmHg</li>
-                    <li>Compresión 20-30mmHg</li>
-                </ul>    
-            <li><b><a href="nosotros.html">Nosotros</a></b></li>
-            <li><b><a href="contacto.html">Contacto</a></b></li>
+            <li><b><a href="index.html">INICIO</a></b></li>
+            <li><b><a href="mediasterapéuticas.html">MEDIAS TERAPÉUTICAS</a></b></li>
+            <li><b><a href="nosotros.html">NOSOTROS</a></b></li>
+            <li><b><a href="contacto.html">CONTACTO</a></b></li>
         </ul>
     </nav>
-    <br>
-    <section>
-            <h2>Encontranos en:</h2>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13086.398290392395!2d-57.9526667!3d-34.9164971!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95a2e6317aae92a7%3A0x381c541f4950c958!2sStylo%20Fine%20Socks%20-%20La%20Plata!5e0!3m2!1ses-419!2sar!4v1727711955874!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-    </section>
-    <br>
+    <header>
+        <img src="logoeditado.jpg" alt="logoeditado" width="100%">
+    </header>
     <footer>
         <h3>
             Redes Sociales
