--- a/nosotros.html
+++ b/nosotros.html
@@ -5,23 +5,40 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nosotros</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/fcbd091d12.js" crossorigin="anonymous"></script>
 </head>
 <body>
+    <div>
+        <p>15% de descuento en efectivo - 3 cuotas sin interés con tarjetas bancarizadas</p>
+    </div>
     <nav>
         <ul>
-            <li><b><a href="index.html">Inicio</a></b></li>
-            <li><b><u>Productos</u></b></li>
-            <li><b><a href="nosotros.html">Nosotros</a></b></li>
-            <li><b><a href="contacto.html">Contacto</a></b></li>
+            <li><b><a href="index.html">INICIO</a></b></li>
+            <li><b><a href="mediasterapéuticas.html">MEDIAS TERAPÉUTICAS</a></b></li>
+            <li><b><a href="nosotros.html">NOSOTROS</a></b></li>
+            <li><b><a href="contacto.html">CONTACTO</a></b></li>
         </ul>
     </nav>
-    <main>
-        <h2>Nuestro local..</h2>
-        <img src="fachada.jpg" alt="fachada_local" width="30%">
-        <h2>Quiénes somos?</h2>
+    <main id="nosotros">
+        <img src="fachada.jpg" alt="fachada_local" width="40%"> <br><br>
+        <h2>SOBRE NOSOTROS</h2> <br>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione ut est, odio minima sapiente corporis hic quas alias at aspernatur illo praesentium nobis error id accusamus? Ullam veritatis eveniet omnis?
         Praesentium aliquid hic facere deleniti cumque sunt animi magnam accusamus odio incidunt nemo magni explicabo, reprehenderit excepturi, voluptates modi neque temporibus placeat? Id sit autem, fugit doloribus tempora repellendus quaerat?
-        Quasi saepe earum veniam suscipit nam quos necessitatibus officiis provident praesentium quae eum, quod, ex aliquam deserunt consequuntur ut, hic harum ipsam cumque alias? Autem facilis assumenda beatae officiis et?</p>
+        Quasi saepe earum veniam suscipit nam quos necessitatibus officiis provident praesentium quae eum, quod, ex aliquam deserunt consequuntur ut, hic harum ipsam cumque alias? Autem facilis assumenda beatae officiis et?Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias tempore distinctio, repellendus sit cupiditate alias, necessitatibus ab excepturi nemo quisquam saepe in eligendi esse odit! Nobis soluta libero excepturi harum!</p>
     </main>
+    <br><br>
+    <section>
+            <h3>DONDE ENCONTRARNOS?</h3> <br>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13086.398290392395!2d-57.9526667!3d-34.9164971!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95a2e6317aae92a7%3A0x381c541f4950c958!2sStylo%20Fine%20Socks%20-%20La%20Plata!5e0!3m2!1ses-419!2sar!4v1727711955874!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </section>
+    <footer>
+        <h3>
+            Redes Sociales
+        </h3>
+        <ul>
+                <li><a href="https://www.instagram.com/stylo.laplata/?hl=es-la" target="_blank"><i class="fa-brands fa-instagram" style="color: #3f4474;"></i></a></li>
+                <li><a href="https://www.facebook.com/profile.php?id=100054909783162" target="_blank"><i class="fa-brands fa-facebook" style="color: #3f4474;"></i></a></li>
+        </ul>
+    </footer>  
 </body>
 </html>
