cambios con flex y nueva paleta de colores

--- a/contacto.html
+++ b/contacto.html
@@ -8,27 +8,32 @@
     <script src="https://kit.fontawesome.com/fcbd091d12.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <div>
-        <p>15% de descuento en efectivo - 3 cuotas sin interés con tarjetas bancarizadas</p>
-    </div>
-    <nav>
-        <ul>
-            <li><b><a href="index.html">INICIO</a></b></li>
-            <li><b><a href="mediasterapéuticas.html">MEDIAS TERAPÉUTICAS</a></b></li>
-            <li><b><a href="nosotros.html">NOSOTROS</a></b></li>
-            <li><b><a href="contacto.html">CONTACTO</a></b></li>
-        </ul>
-    </nav>
+    <header>
+        <div>
+            <p>15% de descuento en efectivo - 3 cuotas sin interés con tarjetas bancarizadas</p>
+        </div>
+        <nav>
+            <h1>
+                Stylo La Plata
+            </h1>
+            <ul>
+                <li><b><a href="index.html" style="color: #fdf6ec;">INICIO</a></b></li>
+                <li><b><a href="mediasterapéuticas.html" style="color: #fdf6ec;">MEDIAS TERAPÉUTICAS</a></b></li>
+                <li><b><a href="nosotros.html" style="color: #fdf6ec;">NOSOTROS</a></b></li>
+                <li><b><a href="contacto.html" style="color: #fdf6ec;">CONTACTO</a></b></li>
+            </ul>
+            <input type="search" value="Buscar">
+        </nav>
+    </header>
     <br>
     <div class="cajas">
-        <i class="fa-solid fa-phone" style="color: #3f4474;"></i> 2214276920 <br>
-        <i class="fa-brands fa-whatsapp" style="color: #3f4474;"></i> +5492216349986 <br>
-        <i class="fa-solid fa-envelope" style="color: #3f4474;"></i> stylolaplata@gmail.com <br>
-        <i class="fa-brands fa-instagram" style="color: #3f4474;"></i> <a href="https://www.instagram.com/stylo.laplata/?hl=es-la" target="_blank">Seguinos en Instagram</a> <br>
-        <i class="fa-brands fa-facebook" style="color: #3f4474;"></i> <a href="https://www.facebook.com/profile.php?id=100054909783162" target="_blank">Seguinos en Facebook</a>
+        <i class="fa-solid fa-phone" style="color: #28595f;"></i> 2214276920 <br>
+        <i class="fa-brands fa-whatsapp" style="color: #28595f;"></i> +5492216349986 <br>
+        <i class="fa-solid fa-envelope" style="color: #28595f;"></i> stylolaplata@gmail.com <br>
+        <i class="fa-brands fa-instagram" style="color: #28595f;"></i> <a href="https://www.instagram.com/stylo.laplata/?hl=es-la" target="_blank">Seguinos en Instagram</a> <br>
+        <i class="fa-brands fa-facebook" style="color: #28595f;"></i> <a href="https://www.facebook.com/profile.php?id=100054909783162" target="_blank">Seguinos en Facebook</a>
     </div> <br><br>
     
-
     <main>
             <form action="colecta.html">
                 <label for="text"><b>NOMBRE:</b></label> <br>
@@ -43,14 +48,26 @@
     </main>
 
     <footer>
-        <h3>
-            Redes Sociales
-        </h3>
+        <b><h4>REDES SOCIALES</h4></b>
         <ul>
-                <li><a href="https://www.instagram.com/stylo.laplata/?hl=es-la" target="_blank"><i class="fa-brands fa-instagram" style="color: #3f4474;"></i></a></li>
-                <li><a href="https://www.facebook.com/profile.php?id=100054909783162" target="_blank"><i class="fa-brands fa-facebook" style="color: #3f4474;"></i></a></li>
+                <li><a href="https://www.instagram.com/stylo.laplata/?hl=es-la" target="_blank"><i class="fa-brands fa-instagram" style="color: #eeeae4;"></i></a></li>
+                <li><a href="https://www.facebook.com/profile.php?id=100054909783162" target="_blank"><i class="fa-brands fa-facebook" style="color: #eeeae4;"></i></a></li>
         </ul>
-    </footer>    
+        <br>
+        <b><h4>CONTACTÁNOS</h4></b>    
+        <i class="fa-solid fa-phone" style="color: #eeeae4;"></i> 2214276920 <br>
+        <i class="fa-brands fa-whatsapp" style="color: #eeeae4;"></i> +5492216349986 <br>
+        <i class="fa-solid fa-envelope" style="color: #eeeae4;"></i> stylolaplata@gmail.com <br>
+        <br>
+        <b><h4>MEDIOS DE PAGO</h4></b>
+        <ul>
+            <li>Débito</li>
+            <li>- Efectivo</li>
+            <li>- Transferencia</li>
+            <li>- Tarjetas de Crédito</li>
+            <li>- Cuenta DNI</li>
+        </ul>
+    </footer> 
 </body>
 </html>
     
