actualizacion de repositorio para pre-entrega

--- a/nosotros.html
+++ b/nosotros.html
@@ -9,54 +9,71 @@
 </head>
 <body>
     <header>
-        <div>
+        <div id="descuento">
             <p>15% de descuento en efectivo - 3 cuotas sin interés con tarjetas bancarizadas</p>
         </div>
         <nav>
-            <h1>
-                Stylo La Plata
-            </h1>
+            <img id="logo" src="logoalgreen.png" alt="logoalgreen" width="150px">
             <ul>
-                <li><b><a href="index.html" style="color: #fdf6ec;">INICIO</a></b></li>
-                <li><b><a href="mediasterapéuticas.html" style="color: #fdf6ec;">MEDIAS TERAPÉUTICAS</a></b></li>
-                <li><b><a href="nosotros.html" style="color: #fdf6ec;">NOSOTROS</a></b></li>
-                <li><b><a href="contacto.html" style="color: #fdf6ec;">CONTACTO</a></b></li>
+                <li><a href="index.html" style="color: #fdf6ec;">INICIO</a></li>
+                <li><a href="mediasterapéuticas.html" style="color: #fdf6ec;">MEDIAS TERAPÉUTICAS</a></li>
+                <li><a href="nosotros.html" style="color: #fdf6ec;">NOSOTROS</a></li>
+                <li><a href="contacto.html" style="color: #fdf6ec;">CONTACTO</a></li>
             </ul>
             <input type="search" value="Buscar">
         </nav>
     </header>
+
     <main id="nosotros">
-        <img src="fachada.jpg" alt="fachada" width="400" style="border: 2px;"> <br><br>
-        <h2>SOBRE NOSOTROS</h2> <br>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione ut est, odio minima sapiente corporis hic quas alias at aspernatur illo praesentium nobis error id accusamus? Ullam veritatis eveniet omnis?
-        Praesentium aliquid hic facere deleniti cumque sunt animi magnam accusamus odio incidunt nemo magni explicabo, reprehenderit excepturi, voluptates modi neque temporibus placeat? Id sit autem, fugit doloribus tempora repellendus quaerat?
-        Quasi saepe earum veniam suscipit nam quos necessitatibus officiis provident praesentium quae eum, quod, ex aliquam deserunt consequuntur ut, hic harum ipsam cumque alias? Autem facilis assumenda beatae officiis et?Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias tempore distinctio, repellendus sit cupiditate alias, necessitatibus ab excepturi nemo quisquam saepe in eligendi esse odit! Nobis soluta libero excepturi harum!</p>
+        <img class="flexnos" src="fachada.jpg" alt="fachada" width="400px">
+        <div class="flexnos">
+            <h2>SOBRE NOSOTROS</h2> <br>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione ut est, odio minima sapiente corporis hic quas alias at aspernatur illo praesentium nobis error id accusamus? Ullam veritatis eveniet omnis?
+            Praesentium aliquid hic facere deleniti cumque sunt animi magnam accusamus odio incidunt nemo magni explicabo, reprehenderit excepturi, voluptates modi neque temporibus placeat? Id sit autem, fugit doloribus tempora repellendus quaerat?</p>
+        </div>
     </main>
-    <br><br>
+
     <section>
             <h3>DONDE ENCONTRARNOS?</h3> <br>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13086.398290392395!2d-57.9526667!3d-34.9164971!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95a2e6317aae92a7%3A0x381c541f4950c958!2sStylo%20Fine%20Socks%20-%20La%20Plata!5e0!3m2!1ses-419!2sar!4v1727711955874!5m2!1ses-419!2sar" width="600" height="450" style="border: 2;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13086.398290392395!2d-57.9526667!3d-34.9164971!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95a2e6317aae92a7%3A0x381c541f4950c958!2sStylo%20Fine%20Socks%20-%20La%20Plata!5e0!3m2!1ses-419!2sar!4v1727711955874!5m2!1ses-419!2sar" width="600" height="450"  allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </section>
+
     <footer>
-        <b><h4>REDES SOCIALES</h4></b>
-        <ul>
-                <li><a href="https://www.instagram.com/stylo.laplata/?hl=es-la" target="_blank"><i class="fa-brands fa-instagram" style="color: #eeeae4;"></i></a></li>
-                <li><a href="https://www.facebook.com/profile.php?id=100054909783162" target="_blank"><i class="fa-brands fa-facebook" style="color: #eeeae4;"></i></a></li>
-        </ul>
-        <br>
-        <b><h4>CONTACTÁNOS</h4></b>    
-        <i class="fa-solid fa-phone" style="color: #eeeae4;"></i> 2214276920 <br>
-        <i class="fa-brands fa-whatsapp" style="color: #eeeae4;"></i> +5492216349986 <br>
-        <i class="fa-solid fa-envelope" style="color: #eeeae4;"></i> stylolaplata@gmail.com <br>
-        <br>
-        <b><h4>MEDIOS DE PAGO</h4></b>
-        <ul>
-            <li>Débito</li>
-            <li>- Efectivo</li>
-            <li>- Transferencia</li>
-            <li>- Tarjetas de Crédito</li>
-            <li>- Cuenta DNI</li>
-        </ul>
-    </footer> 
+        <div class="foo caja1">
+            <ul>
+                <li><a href="index.html" style="color: #fdf6ec;">INICIO</a></li>
+                <li><a href="mediasterapéuticas.html" style="color: #fdf6ec;">MEDIAS TERAPÉUTICAS</a></li>
+                <li><a href="nosotros.html" style="color: #fdf6ec;">NOSOTROS</a></li>
+                <li><a href="contacto.html" style="color: #fdf6ec;">CONTACTO</a></li>
+            </ul>
+        </div>
+        <div class="flexprin">
+            <div>
+                <b><h4>CONTACTÁNOS</h4></b>    
+                <i class="fa-solid fa-phone" style="color: #eeeae4;"></i> 2214276920 <br>
+                <i class="fa-brands fa-whatsapp" style="color: #eeeae4;"></i> +5492216349986 <br>
+                <i class="fa-solid fa-envelope" style="color: #eeeae4;"></i> stylolaplata@gmail.com <br>
+            </div>
+            <div class="foo">
+                <b><h4>REDES SOCIALES</h4></b>
+                <ul>
+                    <li><a href="https://www.instagram.com/stylo.laplata/?hl=es-la" target="_blank"><i class="fa-brands fa-instagram" style="color: #eeeae4;"></i></a></li>
+                    <li><a href="https://www.facebook.com/profile.php?id=100054909783162" target="_blank"><i class="fa-brands fa-facebook" style="color: #eeeae4;"></i></a></li>
+                </ul><br>
+                <b><h4>UBICACIÓN</h4></b>
+                <i class="fa-solid fa-location-dot" style="color: #eeeae4;"></i> 49 n714 entre 9 y 10
+            </div>
+            <div>
+                <b><h4>MEDIOS DE PAGO</h4></b>
+                <ul>
+                   <li>Débito</li>
+                   <li>Efectivo</li>
+                   <li>Transferencia</li>
+                   <li>Tarjetas de Crédito</li>
+                   <li>Cuenta DNI</li>
+                </ul>
+            </div>
+        </div>
+    </footer>  
 </body>
 </html>
