--- a/index.html
+++ b/index.html
@@ -9,43 +9,129 @@
 </head>
 <body>
     <header>
-        <div>
+        <div id="descuento">
             <p>15% de descuento en efectivo - 3 cuotas sin interés con tarjetas bancarizadas</p>
         </div>
         <nav>
-            <h1>
-                Stylo La Plata
-            </h1>
+            <img id="logo" src="logoalgreen.png" alt="logoalgreen" width="150px">
             <ul>
-                <li><b><a href="index.html" style="color: #fdf6ec;">INICIO</a></b></li>
-                <li><b><a href="mediasterapéuticas.html" style="color: #fdf6ec;">MEDIAS TERAPÉUTICAS</a></b></li>
-                <li><b><a href="nosotros.html" style="color: #fdf6ec;">NOSOTROS</a></b></li>
-                <li><b><a href="contacto.html" style="color: #fdf6ec;">CONTACTO</a></b></li>
+                <li><a href="index.html" style="color: #fdf6ec;">INICIO</a></li>
+                <li><a href="mediasterapéuticas.html" style="color: #fdf6ec;">MEDIAS TERAPÉUTICAS</a></li>
+                <li><a href="nosotros.html" style="color: #fdf6ec;">NOSOTROS</a></li>
+                <li><a href="contacto.html" style="color: #fdf6ec;">CONTACTO</a></li>
             </ul>
             <input type="search" value="Buscar">
         </nav>
+        <div>
+            <img src="carrusel.png" alt="carrusel" width="100%">
+        </div>
     </header>
-    
+
+    <main id="principal">
+        <h2>PRODUCTOS DESTACADOS</h2>
+        <div class="flexprin">
+            <div class="medias">
+                <img src="lycra.png" alt="lycra" height="300px">
+                <p>Media 3/4 de Lycra <br> Compresión 8-15mmHg <br> <b>$15.760,00</b></p>
+              </div>
+              <div class="medias"> 
+                <img src="algodon.png" alt="algodon" height="300px">
+                <p>Media 3/4 de Algodón <br> Compresión 8-15mmHg <br> <b>$27.370,00</b></p>
+              </div>
+              <div class="medias">
+                <img src="hombre.png" alt="hombre" height="300px">
+                <p>Media 3/4 de Algodón <br> Compresión 8-15mmHg <br> <b>$28.660</b></p>
+              </div>
+              <div class="medias">
+                <img src="hombre.png" alt="hombre" height="300px">
+                <p>Media 3/4 de Microfibra <br> Compresión 8-15mmHg <br> <b>$21.240</b></p>
+              </div>
+              <div class="medias"> 
+                <img src="lycra.png" alt="lycra" height="300px">
+                <p>Media 3/4 de Lycra <br> Compresión 15-20mmHg <br> <b>$21.240,00</b></p>
+              </div>
+              <div class="medias"> 
+                <img src="algodon.png" alt="algodon" height="300px">
+                <p>Media 3/4 de Algodón <br> Compresión 15-20mmHg <br> <b>$31.250,00</b></p>
+            </div>
+            <div class="medias">
+              <img src="hombre.png" alt="hombre" height="300px">
+              <p>Media 3/4 de Algodón <br> Compresión 15-20mmHg <br> <b>$34.170</b></p>
+            </div>
+            <div class="medias">
+              <img src="hombre.png" alt="hombre" height="300px">
+              <p>Media 3/4 de Microfibra <br> Compresión 15-20mmHg <br> <b>$28.770</b></p>
+            </div>
+        </div>
+    </main>
+
+    <section id="info">
+        <div class="infoo">
+            <i class="fa-solid fa-money-bill"></i>
+            <div>
+                <h4>EFECTIVO</h4>
+                <p>15% de descuento en efectivo billete</p>
+            </div>
+        </div>
+        <div class="infoo">
+            <i class="fa-solid fa-truck"></i>
+            <div>
+                <h4>ENVÍOS</h4>
+                <p>Envío gratis dentro del casco urbano</p>
+            </div>
+        </div>
+        <div class="infoo">
+            <i class="fa-solid fa-credit-card"></i>
+            <div>
+                <h4>TARJ. DE CRÉDITO</h4>
+                <p>3 cuotas sin interés con bancarizadas</p>
+            </div>
+        </div>
+        <div class="infoo">
+            <i class="fa-brands fa-whatsapp"></i>
+            <div>
+                <h4>WHATSAPP</h4>
+                <a href="https://wa.link/ieuiyk" target="_blank" style="color: #28595f;">Contactános</a>
+            </div>
+        </div>
+    </section>
+
     <footer>
-        <b><h4>REDES SOCIALES</h4></b>
-        <ul>
-                <li><a href="https://www.instagram.com/stylo.laplata/?hl=es-la" target="_blank"><i class="fa-brands fa-instagram" style="color: #eeeae4;"></i></a></li>
-                <li><a href="https://www.facebook.com/profile.php?id=100054909783162" target="_blank"><i class="fa-brands fa-facebook" style="color: #eeeae4;"></i></a></li>
-        </ul>
-        <br>
-        <b><h4>CONTACTÁNOS</h4></b>    
-        <i class="fa-solid fa-phone" style="color: #eeeae4;"></i> 2214276920 <br>
-        <i class="fa-brands fa-whatsapp" style="color: #eeeae4;"></i> +5492216349986 <br>
-        <i class="fa-solid fa-envelope" style="color: #eeeae4;"></i> stylolaplata@gmail.com <br>
-        <br>
-        <b><h4>MEDIOS DE PAGO</h4></b>
-        <ul>
-            <li>Débito</li>
-            <li>- Efectivo</li>
-            <li>- Transferencia</li>
-            <li>- Tarjetas de Crédito</li>
-            <li>- Cuenta DNI</li>
-        </ul>
+        <div class="foo caja1">
+            <ul>
+                <li><a href="index.html" style="color: #fdf6ec;">INICIO</a></li>
+                <li><a href="mediasterapéuticas.html" style="color: #fdf6ec;">MEDIAS TERAPÉUTICAS</a></li>
+                <li><a href="nosotros.html" style="color: #fdf6ec;">NOSOTROS</a></li>
+                <li><a href="contacto.html" style="color: #fdf6ec;">CONTACTO</a></li>
+            </ul>
+        </div>
+        <div class="flexprin">
+            <div>
+                <b><h4>CONTACTÁNOS</h4></b>    
+                <i class="fa-brands fa-whatsapp" style="color: #eeeae4;"></i> +5492216349986 <br>
+                <i class="fa-solid fa-phone" style="color: #eeeae4;"></i> 2214270567 / 2214276920 <br>
+                <i class="fa-solid fa-envelope" style="color: #eeeae4;"></i> stylolaplata@gmail.com <br>
+            </div>
+            <div class="foo">
+                <b><h4>REDES SOCIALES</h4></b>
+                <ul>
+                    <li><a href="https://www.instagram.com/stylo.laplata/?hl=es-la" target="_blank"><i class="fa-brands fa-instagram" style="color: #eeeae4;"></i></a></li>
+                    <li><a href="https://www.facebook.com/profile.php?id=100054909783162" target="_blank"><i class="fa-brands fa-facebook" style="color: #eeeae4;"></i></a></li>
+                </ul><br>
+                <b><h4>UBICACIÓN</h4></b>
+                <i class="fa-solid fa-location-dot" style="color: #eeeae4;"></i> 49 n714 entre 9 y 10
+            </div>
+            <div>
+                <b><h4>MEDIOS DE PAGO</h4></b>
+                <ul>
+                   <li>Débito</li>
+                   <li>Efectivo</li>
+                   <li>Transferencia</li>
+                   <li>Tarjetas de Crédito</li>
+                   <li>Cuenta DNI</li>
+                </ul>
+            </div>
+        </div>
     </footer>  
 </body>
 </html>
