arreglo de links

--- a/contacto.html
+++ b/contacto.html
@@ -30,8 +30,8 @@
             <i class="fa-brands fa-whatsapp" style="color: #28595f;"></i> +5492216349986 <br>
             <i class="fa-solid fa-phone" style="color: #28595f;"></i> 2214270567 / 2214276920 <br>
             <i class="fa-solid fa-envelope" style="color: #28595f;"></i> stylolaplata@gmail.com <br>
-            <i class="fa-brands fa-instagram" style="color: #28595f;"></i> <a href="https://www.instagram.com/stylo.laplata/?hl=es-la" target="_blank">Seguinos en Instagram</a> <br>
-            <i class="fa-brands fa-facebook" style="color: #28595f;"></i> <a href="https://www.facebook.com/profile.php?id=100054909783162" target="_blank">Seguinos en Facebook</a>
+            <i class="fa-brands fa-instagram" style="color: #28595f;"></i> <a href="https://www.instagram.com/stylo.laplata/?hl=es-la" target="_blank" style="color: #28595f;">Seguinos en Instagram</a> <br>
+            <i class="fa-brands fa-facebook" style="color: #28595f;"></i> <a href="https://www.facebook.com/profile.php?id=100054909783162" target="_blank" style="color: #28595f;">Seguinos en Facebook</a>
         </div> <br><br>
         <div class="cajacont c2">
             <form action="colecta.html">
